force-app/main/default/objects/NCMT_RA_Overhead_Analysis__c/NCMT_RA_Overhead_Analysis__c.object-meta.xml
<CustomObject>
    <description>RA Overhead Analysis</description>
    <label>RA Overhead Analysis</label>
    <nameField>
        <displayFormat>RA-OA-{0000}</displayFormat>
        <label>RA Overhead Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RA Overhead Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>