force-app/main/default/objects/NCMT_RA_Overhead_Analysis__c/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>