force-app/main/default/objects/NCMT_RA_Overhead_Analysis__c/fields/Fully_occupied__c.field-meta.xml
<CustomField>
    <fullName>Fully_occupied__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fully occupied</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>