force-app/main/default/objects/NCMT_RA_Overhead_Analysis__c/fields/Overhead_Type__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Type__c</fullName>
    <label>Overhead Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>