force-app/main/default/objects/NCMT_RA_Overhead_Analysis__c/fields/Partially_vacant_work_area__c.field-meta.xml
<CustomField>
    <fullName>Partially_vacant_work_area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Partially vacant work area</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>