force-app/main/default/objects/NCMT_RA_Overhead_Analysis__c/fields/Vacant_work_area_clear_path_travel__c.field-meta.xml
<CustomField>
    <fullName>Vacant_work_area_clear_path_travel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vacant work area: clear path travel</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>