force-app/main/default/objects/NCMT_RA_Overhead_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Overhead_Type__c</columns>
    <columns>Contract_Amount__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>New__c</columns>
    <columns>Fully_vacant_building__c</columns>
    <columns>Vacant_work_area_clear_path_travel__c</columns>
    <columns>Vacant_work_area_difficult_path_travel__c</columns>
    <columns>Partially_vacant_work_area__c</columns>
    <columns>Fully_occupied__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>